Enhance TaskAgent with dependency-aware execution
- Filter completed tasks to only include actual dependencies of current task
- Build dependency-specific context for tasks with dependencies
- Distinguish between REQUIRED (blocking) and REFERENCE (informational) dependencies
- Provide explicit dependency outputs section in prompts
- Add null safety for dependency lists
- Use general context for tasks without dependencies
- Ensure tasks build upon specific dependency results rather than generic context

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>